--- a/_posts/2015-10-05-hello.mkd
+++ b/_posts/2015-10-05-hello.mkd
@@ -4,6 +4,7 @@ title:  "Best Tool for mapping trips"
 date:   2015-10-05 12:15:28
 categories: blog
 thumbnail: /img/thumb2.png
+description: "This is a short description"
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
