--- a/_posts/2015-10-11-2015-10-11-where-people-run.md
+++ b/_posts/2015-10-11-2015-10-11-where-people-run.md
@@ -5,7 +5,7 @@ description: Maps show how people run in cities
 categories: blog
 thumbnail: /img/thumb_mapwpr.png
 "site-url": "http://flowingdata.com/2014/02/05/where-people-run"
-published: false
+published: true
 title: Where People Run
 ---
 
